--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,20 +6,22 @@ body{
 .filtros{
     margin-bottom: 20px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    gap:10px
 }
 
-.table{
+.tabla{
     text-align: center;
-    border: 1px solid ;
+    overflow-x:auto;
     width: 100%;
-    
 }
 
 .table {
     border: 1px solid #c9c9c9;
     border-radius: 24px;
     background-color: #dcdcdc;
+    width: 100%;
 }
 
 
